--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/196/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/196/index.mdx
@@ -7,16 +7,16 @@ date: 08-14-2024
 
 Salut à tous !
 
-This week, we welcome **2 new contributors** to help **ensure the continuity of the newsletter** throughout the year, even when Seb takes a break.
+Cette semaine, nous accueillons **2 nouveaux contributeurs** pour **assurer la continuité de la newsletter** tout au long de l'année, même lorsque Seb fait une pause.
 
-**Cyril and Matthieu from [Theodo Apps (formerly BAM)](https://apps.theodo.com/en?utm_source=thisweekinreact)** here 👋, filling in to bring you the latest news from the React and React Native worlds.
+**Cyril et Matthieu de [Theodo Apps (anciennement BAM)](https://apps.theodo.com/en?utm_source=thisweekinreact)** sont présents 👋, pour vous présenter les dernières nouvelles des mondes React et React Native.
 
-It’s a relatively calm week for React, with some ongoing discussions about the Suspense drama in React 19.
+C'est une semaine relativement calme pour React, avec quelques discussions en cours sur le feuilleton Suspense dans React 19.
 
-**But React Native? That’s where the real action is!**\
-From Expo demoing a way to integrate React DOM components to the exciting launch of React Native WebGPU, there’s plenty to talk about. Plus, we’re diving into new approaches to native module development that are sure to shake things up. And React Native 0.75 is around the corner, we'll cover it next week!
+**Et React Native ? C'est là que se trouve la véritable activité  !**\
+Entre la démonstration par Expo d'un moyen d'intégrer les composants React DOM et le lancement passionnant de React Native WebGPU, il y a beaucoup de choses à dire. De plus, nous nous plongeons dans de nouvelles approches du développement de modules natifs qui ne manqueront pas de bouleverser la donne. Et React Native 0.75 est sur le point d'arriver, nous en parlerons la semaine prochaine !
 
-Our partner conf **[reactjsday](https://2024.reactjsday.it/?utm_source=thisweekinreact)** (🇮🇹 Verona - 25 October) is celebrating its 10th year by upgrading to 2 tracks (16 talks). Get a 10% discount with code "TWIR". Great speakers have already been announced: Matheus Albuquerque, Aurora Scharff, Dani Coll, and more!
+Notre partenaire conf **[reactjsday](https://2024.reactjsday.it/?utm_source=thisweekinreact)** (🇮🇹 Verona - 25 octobre) fête sa 10ème année en passant à 2 sessions (16 conférences). Bénéficiez d'une réduction de 10% avec le code « TWIR ». D'excellents orateurs ont déjà été annoncés : Matheus Albuquerque, Aurora Scharff, Dani Coll, et bien d'autres encore !
 
 <!-- truncate -->
 
@@ -50,20 +50,20 @@ Your design system makes web development more efficient and consistent, but we k
 ## ⚛️ React {#react}
 
 - 💸 [Chromatic – Visual testing for Storybook, Playwright, and Cypress. Catch UI bugs that functional tests miss. Lightning-fast & zero flake.](https://www.chromatic.com/features/visual-test?utm_source=thisweekinreact&utm_medium=quick_link&utm_campaign=q3_2024)
-- 👀 [React 19 - Disabling prerendering siblings of suspended components breaking common pattern](https://github.com/facebook/react/issues/29898): The React team is working on reversing this change that was planned to be included in React 19 but would have degraded the performance of lots of SPAs. No ETA yet, it may take some time to get a stable React 19 release
-- 🐦 [Matt Pocock has a suggestion for a new approach to library typings](https://x.com/mattpocockuk/status/1821124980043636841): React could for instance expose `useState` types with TypeScript namespaces
-- 🐦 [Matt](https://x.com/mattpocockuk/status/1821926395380986219) [Pocock](https://x.com/mattpocockuk/status/1821124980043636841)['s tip to add auto-completion to your component props](https://x.com/mattpocockuk/status/1821926395380986219): Using `string & {}`
-- 📜 [A deep dive on forms with modern React](https://www.epicreact.dev/react-forms): Kent explains how to use the new hooks `​​useFormStatus`, `useActionState` and `useOptimistic`
-- 📜 [How Jotai was born](https://blog.axlight.com/posts/how-jotai-was-born/): Daishi Kato recaps his multiple iterations on state management libraries before creating Jotai
-- 📜 [Why using dependency injection in your app can lead to cleaner and easier to maintain code](https://codedrivendevelopment.com/posts/dependency-injection-in-react): A valuable article that encourages thoughtful consideration of DI in frontend development, especially for those working on more complex React projects
-- 📜 [Building an App with Next.js and Electron with Server Components Support](https://www.saybackend.com/blog/03-electron-nextjs-ssr): Explains how to hijack Next.js to run an RSC server in an Electron app
+- 👀 [React 19 - Disabling prerendering siblings of suspended components breaking common pattern](https://github.com/facebook/react/issues/29898) : L'équipe React travaille sur l'annulation de ce changement qui devait être inclus dans React 19 mais qui aurait dégradé les performances de beaucoup de SPA. Aucune date prévue pour le moment, cela peut prendre un certain temps pour obtenir une version stable de React 19.
+- 🐦 [Matt Pocock has a suggestion for a new approach to library typings](https://x.com/mattpocockuk/status/1821124980043636841) : React pourrait par exemple exposer les types `useState` avec des espaces de noms TypeScript
+- 🐦 Astuce de [Matt](https://x.com/mattpocockuk/status/1821926395380986219) [Pocock](https://x.com/mattpocockuk/status/1821124980043636841) [pour ajouter l'auto-complétion à vos props de composants](https://x.com/mattpocockuk/status/1821926395380986219) : Utilisation de `string & {}`
+- 📜 [A deep dive on forms with modern React](https://www.epicreact.dev/react-forms) : Kent explique comment utiliser les nouveaux hooks `useFormStatus`, `useActionState` et `useOptimistic`.
+- 📜 [How Jotai was born](https://blog.axlight.com/posts/how-jotai-was-born/) : Daishi Kato revient sur ses multiples expériences en matière de bibliothèques de gestion d'état avant de créer Jotai.
+- 📜 [Why using dependency injection in your app can lead to cleaner and easier to maintain code](https://codedrivendevelopment.com/posts/dependency-injection-in-react) : Un article précieux qui encourage la réflexion sur l'injection de dépendances dans le développement frontend, en particulier pour ceux qui travaillent sur des projets React plus complexes.
+- 📜 [Building an App with Next.js and Electron with Server Components Support](https://www.saybackend.com/blog/03-electron-nextjs-ssr) : Explique comment détourner Next.js pour faire tourner un serveur RSC dans une application Electron.
 - 📜 [Optimizing SPA load times with async chunks preloading](https://mmazzarolo.com/blog/2024-08-13-async-chunk-preloading-on-load/)
 - 📜 [What is a Component Library and Should You Build Your Own?](https://component-odyssey.com/articles/10-what-is-a-library-should-you-build-your-own)
 - 📦 [Docusaurus 3.5 - Authors pages and many new blogging features](https://docusaurus.io/blog/releases/3.5)
 - 📦 [Impact-React in RC - Signals for React, by CodeSandbox](https://impact-react.dev)
 - 📦 [Plunk - New OSS email platform, with react-email and jsx-email integrations](https://www.useplunk.com/)
 - 📦 [react-switchboard - Quickly create custom DevTools for your apps](https://github.com/coryhouse/react-switchboard)
-- 📦 [react-call - Imperatively display React Components and await their result](https://github.com/desko27/react-call): An interesting idea to simplify implementing confirmation dialogs, toasters…
+- 📦 [react-call - Imperatively display React Components and await their result](https://github.com/desko27/react-call) : Une idée intéressante pour simplifier la mise en place de dialogues de confirmation, de toasters...
 - 📦 [@lazarv/react-server - An alternative framework with Server Components](https://react-server.dev/)
 - 🎙️ [Syntax.fm - We React to State of React Survey](https://syntax.fm/show/805/we-react-to-state-of-react-survey)
 - 🎙️ [Syntax.fm - CSS Components: Tailwind, Panda, Scoped, Modules, Classes, Variables, CSS-in-JS and Sprinkles!](https://syntax.fm/show/807/css-components-tailwind-panda-scoped-modules-classes-variables-css-in-js-and-sprinkles)
@@ -103,27 +103,27 @@ Get up to 2M free-tier events and 10K session recordings — [**all for free**](
 
 **🎥 [React Native WebGPU](https://www.youtube.com/watch?v=i-DGY98cTjk)**
 
-React Native WebGPU has just launched, offering a unified API to leverage the GPU for advanced graphics and computation in React Native! By reusing the Web API standard, we will be able to easily integrate existing WebGPU code samples and libraries, such as ThreeJS, directly into React Native.
-Beyond just graphics, React Native WebGPU can be used for tasks like matrix computations, making it interesting for on-device machine learning algorithms. It's built using Nitro Modules for smooth Typescript to C++ interoperability. Currently, it's available in technical preview, signaling exciting developments ahead!
+React Native WebGPU vient d'être lancé, offrant une API unifiée pour exploiter le GPU pour des graphiques et des calculs avancés dans React Native ! En réutilisant la norme Web API, nous serons en mesure d'intégrer facilement les échantillons de code et les bibliothèques WebGPU existants, tels que ThreeJS, directement dans React Native.
+Au-delà du graphisme, le WebGPU React Native peut être utilisé pour des tâches telles que les calculs matriciels, ce qui le rend intéressant pour les algorithmes d'apprentissage automatique sur appareil. Il est construit à l'aide de Nitro Modules pour une interopérabilité fluide entre Typescript et C++. Actuellement, il est disponible en aperçu technique, ce qui laisse présager des développements passionnants !
 
 ---
 
-**The Future of React Native Modules**
+**L'avenir des modules React Native**
 
-Exciting times for React Native developers! Marc Rousavy is shaking things up with NitroModules, a new way to write native code 📦 [that’s blowing away existing solutions in speed tests](https://github.com/mrousavy/NitroBenchmarks). He's encountered some limitations with JSI in VisionCamera. The project is already stable on the C++ side and is already being used in various projects like 🐦 [react-native-unistyles](https://x.com/jpudysz/status/1822541758137303233) and react-native-webgpu, with Swift and Kotlin bindings still in progress.
+Une période passionnante pour les développeurs React Native ! Marc Rousavy bouleverse les choses avec NitroModules, une nouvelle façon d'écrire du code natif 📦 [qui fait décoller les solutions existantes dans les tests de vitesse](https://github.com/mrousavy/NitroBenchmarks). Il a rencontré quelques limitations avec JSI dans VisionCamera. Le projet est déjà stable du côté C++ et est déjà utilisé dans divers projets comme 🐦 [react-native-unistyles](https://x.com/jpudysz/status/1822541758137303233) et react-native-webgpu, avec des liaisons Swift et Kotlin toujours en cours.
 
-👀 [Meanwhile, a new proposal to push the use of Swift for TurboModules has landed.](https://github.com/okwasniewski/discussions-and-proposals/blob/22edd2c7853aaf2ee654b57f4521e43d668103fb/proposals/0000-swift-turbo-modules.md) These changes will ease native modules development by moving away from Objective-C and C++. With these updates, building native modules is about to get a whole lot better!
+👀 [Entre-temps, une nouvelle proposition visant à promouvoir l'utilisation de Swift pour les TurboModules a vu le jour](https://github.com/okwasniewski/discussions-and-proposals/blob/22edd2c7853aaf2ee654b57f4521e43d668103fb/proposals/0000-swift-turbo-modules.md). Ces changements faciliteront le développement de modules natifs en s'éloignant de l'Objective-C et du C++. Avec ces mises à jour, la création de modules natifs est sur le point de s'améliorer considérablement !
 
 ---
 
 - 💸 [Galaxies.dev - Become an expert React Native Developer & Save $65 before price increases next Tuesday!](https://galaxies.dev/subscription?utm_campaign=announcement&utm_medium=price-updates&utm_source=thisweekinreact.com)
 - 👀 [React Native 0.76 will likely bump the minimum iOS version to 15.1](https://github.com/react-native-community/discussions-and-proposals/discussions/812)
-- 👀 [“use dom” - Expo is working on a way to seamlessly integrate React Web components in React Native apps](https://docs.expo.dev/guides/dom-components/): New experimental Expo feature allows importing React DOM components, communicating with them with props and callbacks! The components are rendered with webviews and not native views, so it will probably be most useful for migrations or secondary features
-- 👀 [React Native Screens 4.0 beta](https://github.com/software-mansion/react-native-screens/releases/tag/4.0.0-beta.0): With iOS custom detents & Android form sheets
+- 👀 [“use dom” - Expo is working on a way to seamlessly integrate React Web components in React Native apps](https://docs.expo.dev/guides/dom-components/) : La nouvelle fonctionnalité expérimentale d'Expo permet d'importer des composants React DOM, en communiquant avec eux avec des props et des callbacks ! Les composants sont rendus avec des webviews et non des vues natives, donc cette fonctionnalité sera probablement plus utile pour les migrations ou les fonctionnalités secondaires.
+- 👀 [React Native Screens 4.0 beta](https://github.com/software-mansion/react-native-screens/releases/tag/4.0.0-beta.0) : Avec les « custom detents » d'iOS et les « form sheets » d'Android
 - 👀 [Upcoming Autolinking performance benefits shipping in React Native 0.75 & Expo SDK 51](https://github.com/react-native-community/discussions-and-proposals/discussions/814)
-- 📖 [Expo Docs update - Unit testing with Jest](https://docs.expo.dev/develop/unit-testing/): Now explains how to set up jest-expo and React Native Testing Library
-- 🗓️ [React Universe Conf](https://www.reactuniverseconf.com/?utm_source=thisweekinreact) -  🇵🇱 Wrocław - Sept 5-6. Get a 10% discount with code "TWIR". Speakers: Dan Abramov, Evan Bacon, Kent C. Dodds, Delba Oliveira...
-- 📜 [Cocoapods is officially in maintenance mode](https://blog.cocoapods.org/CocoaPods-Support-Plans/): React Native will need to migrate at some point
+- 📖 [Expo Docs update - Unit testing with Jest](https://docs.expo.dev/develop/unit-testing/) : Explique maintenant comment configurer jest-expo et la bibliothèque de test React Native
+- 🗓️ [React Universe Conf](https://www.reactuniverseconf.com/?utm_source=thisweekinreact) -  🇵🇱 Wrocław - 5-6 septembre. Bénéficiez d'une réduction de 10% avec le code « TWIR ». Intervenants : Dan Abramov, Evan Bacon, Kent C. Dodds, Delba Oliveira...
+- 📜 [Cocoapods is officially in maintenance mode](https://blog.cocoapods.org/CocoaPods-Support-Plans/) : React Native devra migrer à un moment ou à un autre
 - 📦 [react-native-macos support for RN 0.74 is out](https://github.com/microsoft/react-native-macos/releases/tag/v0.74.1)
 - 🎥 [Reactiiive - Building a Story List UI with Reanimated (React Native)](https://www.youtube.com/watch?v=NNRym_f8JsA)
 - 🎥 [Simon Grimm - React Native Firebase Authentication with Expo Router](https://www.youtube.com/watch?v=BsOik6ycGqk)
